--- a/index.delivery.html
+++ b/index.delivery.html
@@ -94,7 +94,7 @@
   </div>
 
   <div class="chart-box">
-    <h3>📈 Vendas por Semana por Empresa
+    <h3>📈 Vendas por Mês por Empresa
       <button class="whatsapp-btn" onclick="enviarWhatsapp()">Enviar via WhatsApp</button>
     </h3>
     <canvas id="graficoVendas"></canvas>
@@ -166,14 +166,14 @@ async function carregarDados() {
   const dadosPorEmpresa = {};
   filtrado.forEach(d => {
     const data = new Date(d.data);
-    const semana = `${data.getFullYear()}-W${('0'+luxon.DateTime.fromJSDate(data).weekNumber).slice(-2)}`;
+    const mesAno = luxon.DateTime.fromJSDate(data).toFormat('MM/yyyy');
     if (!dadosPorEmpresa[d.empresa]) dadosPorEmpresa[d.empresa] = {};
-    dadosPorEmpresa[d.empresa][semana] = (dadosPorEmpresa[d.empresa][semana] || 0) + parseFloat(d.bruto || 0);
+    dadosPorEmpresa[d.empresa][mesAno] = (dadosPorEmpresa[d.empresa][mesAno] || 0) + parseFloat(d.bruto || 0);
   });
 
   const datasets = Object.keys(dadosPorEmpresa).map((empresa, idx) => {
     const cor = `hsl(${idx * 60}, 70%, 50%)`;
-    const pontos = Object.entries(dadosPorEmpresa[empresa]).map(([x, y]) => ({ x, y })).sort((a, b) => new Date(a.x) - new Date(b.x));
+    const pontos = Object.entries(dadosPorEmpresa[empresa]).map(([x, y]) => ({ x, y })).sort((a, b) => new Date("01/"+a.x) - new Date("01/"+b.x));
     return {
       label: empresa,
       data: pontos,
@@ -209,11 +209,11 @@ async function carregarDados() {
         x: {
           type: "time",
           time: {
-            unit: "week",
-            tooltipFormat: "MM/yy",
-            displayFormats: { week: "MM/yy" }
+            unit: "month",
+            tooltipFormat: "MM/yyyy",
+            displayFormats: { month: "MM/yyyy" }
           },
-          title: { display: true, text: "Semana" }
+          title: { display: true, text: "Mês" }
         },
         y: {
           beginAtZero: false,
