--- a/index.delivery.html
+++ b/index.delivery.html
@@ -2,11 +2,9 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Vendas Delivery</title>
+  <title>Vendas Delivery - Grupo DV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/luxon@3/build/global/luxon.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1"></script>
   <style>
     body { font-family: Arial, sans-serif; background: white; margin: 0; padding: 0; }
     header {
@@ -17,235 +15,261 @@
       border-bottom: 1px solid #ccc;
     }
     header img { height: 50px; margin-right: 20px; }
-    header h1 { margin: 0; font-size: 1.6em; font-weight: bold; }
+    header h1 { margin: 0 auto; font-size: 1.6em; font-weight: bold; text-align: center; flex: 1; }
     .container { padding: 20px; }
-    .chart-box, .total-box, .resumo-box, .ranking-box {
+    .chart-box, .total-box, .resumo-box {
       background: white;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.05);
       padding: 20px;
       margin-bottom: 20px;
     }
-    .chart-box canvas { max-width: 100%; height: 200px !important; }
+    .chart-box canvas { max-width: 100%; height: 300px; }
+    .total-line { display: flex; justify-content: space-between; padding: 5px 0; font-size: 1.1em; }
+    .total-line strong { font-weight: bold; }
     .filters {
       display: flex; flex-wrap: wrap; gap: 10px; margin-bottom: 20px; align-items: end;
     }
     .filters label { font-weight: bold; }
-    .filters select, .filters button {
+    .filters select {
       padding: 10px;
       border-radius: 8px;
       border: 1px solid #ccc;
       width: 100%;
     }
+    .filters > div { flex: 1 1 200px; }
     .filters button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
       background-color: #1e1e2f;
       color: white;
       font-weight: bold;
       cursor: pointer;
     }
-    .total-box { text-align: center; font-size: 1.2em; font-weight: bold; }
-    .whatsapp-btn {
-      background-color: #25d366;
+    .resumo-linha {
+      background: white;
+      padding: 15px 20px;
+      border-radius: 16px;
+      margin-bottom: 16px;
+      line-height: 1.6;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+      border: 1px solid #eee;
+    }
+    .resumo-linha strong { display: block; font-size: 1.1em; margin-bottom: 4px; }
+    .btn-whatsapp {
+      background-color: #25D366;
       color: white;
       padding: 10px 20px;
-      border: none;
       border-radius: 8px;
+      border: none;
       font-weight: bold;
       cursor: pointer;
       float: right;
+      margin-bottom: 10px;
     }
-    .resumo-box table, .ranking-box table {
-      width: 100%; border-collapse: collapse; margin-top: 10px;
-    }
-    .resumo-box th, .resumo-box td, .ranking-box th, .ranking-box td {
-      padding: 8px; border: 1px solid #ddd; text-align: left;
-    }
-    .resumo-box th, .ranking-box th { background: #f5f5f5; }
   </style>
 </head>
 <body>
 
 <header>
   <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
-  <h1>Vendas Delivery</h1>
+  <h1>Vendas Delivery - Grupo DV</h1>
 </header>
 
 <div class="container">
   <div class="filters">
     <div>
-      <label for="mesInicial">Mês Inicial</label>
-      <select id="mesInicial"></select>
-    </div>
-    <div>
-      <label for="mesFinal">Mês Final</label>
-      <select id="mesFinal"></select>
-    </div>
-    <div>
-      <label for="empresa">Empresa</label>
-      <select id="empresa"></select>
-    </div>
-    <div>
-      <label for="plataforma">Plataforma</label>
-      <select id="plataforma">
-        <option value="Todas">Todas</option>
-        <option value="iFood">iFood</option>
-        <option value="Delivery Much">Delivery Much</option>
+      <label for="empresaFiltro">Empresa:</label>
+      <select id="empresaFiltro" onchange="atualizarTotais(); atualizarResumoEmpresa(); filtrarGrafico()">
+        <option value="">TODAS</option>
       </select>
     </div>
     <div>
-      <button onclick="carregarDados()">Filtrar Gráfico</button>
+      <label for="mesResumo">Mês:</label>
+      <select id="mesResumo" onchange="atualizarTotais(); atualizarResumoEmpresa(); filtrarGrafico()">
+        <option value="">Todos</option>
+        <option value="01">Janeiro</option>
+        <option value="02">Fevereiro</option>
+        <option value="03">Março</option>
+        <option value="04">Abril</option>
+        <option value="05">Maio</option>
+        <option value="06">Junho</option>
+        <option value="07">Julho</option>
+        <option value="08">Agosto</option>
+        <option value="09">Setembro</option>
+        <option value="10">Outubro</option>
+        <option value="11">Novembro</option>
+        <option value="12">Dezembro</option>
+      </select>
     </div>
   </div>
 
+  <div class="total-box">
+    <h3>💰 Totais por Plataforma</h3>
+    <div class="total-line"><span>iFood</span><span id="total-ifood">R$ 0,00</span></div>
+    <div class="total-line"><span>Delivery Much</span><span id="total-dm">R$ 0,00</span></div>
+    <hr />
+    <div class="total-line"><strong>Total Geral</strong><strong id="total-geral">R$ 0,00</strong></div>
+  </div>
+
   <div class="chart-box">
-    <h3>📈 Vendas por Mês por Empresa
-      <button class="whatsapp-btn" onclick="enviarWhatsapp()">Enviar via WhatsApp</button>
-    </h3>
+    <h3>📈 Vendas Brutas por Mês</h3>
     <canvas id="graficoVendas"></canvas>
   </div>
 
-  <div class="total-box" id="mediaMensal"></div>
+  <button class="btn-whatsapp" onclick="enviarWhatsapp()">📤 Enviar via WhatsApp</button>
 
-  <div class="resumo-box" id="resumo">
-    <h3>📊 Totais por Plataforma</h3>
-    <table>
-      <thead><tr><th>Plataforma</th><th>Total</th></tr></thead>
-      <tbody id="tabelaResumo"></tbody>
-    </table>
-  </div>
-
-  <div class="ranking-box" id="rankingEmpresas">
-    <h3>🏆 Ranking de Empresas</h3>
-    <table>
-      <thead><tr><th>Empresa</th><th>Total</th></tr></thead>
-      <tbody id="tabelaRanking"></tbody>
-    </table>
+  <div class="resumo-box">
+    <h3>🏪 Resumo por Plataforma</h3>
+    <div id="resumo-empresas"></div>
   </div>
 </div>
 
 <script>
 const URL_SCRIPT = "https://script.google.com/macros/s/AKfycby3tGjtsUXcak51bcWG175VU4SWT2RV6pA9vJLyQxlMXSt3bGJFoi2R0YmDmuwzbcbOnw/exec";
+let dados = [];
 let chart;
-const meses = ["Janeiro", "Fevereiro", "Março", "Abril", "Maio", "Junho", "Julho", "Agosto", "Setembro", "Outubro", "Novembro", "Dezembro"];
 
-window.onload = async () => {
+function setDefaultDates() {
   const hoje = new Date();
-  const mesAtual = hoje.getMonth();
-  const mesInicial = document.getElementById("mesInicial");
-  const mesFinal = document.getElementById("mesFinal");
-  meses.forEach((m, i) => {
-    mesInicial.innerHTML += `<option value="${i + 1}" ${i === 0 ? 'selected' : ''}>${m}</option>`;
-    mesFinal.innerHTML += `<option value="${i + 1}" ${i === mesAtual ? 'selected' : ''}>${m}</option>`;
-  });
-  await carregarEmpresas();
-  carregarDados();
-};
+  let mesAnterior = hoje.getMonth();
+  if (mesAnterior === 0) mesAnterior = 12;
+  const mesStr = mesAnterior.toString().padStart(2, '0');
+  document.getElementById("mesResumo").value = mesStr;
+}
 
-async function carregarEmpresas() {
+async function carregarDados() {
+  setDefaultDates();
   const res = await fetch(URL_SCRIPT);
-  const dados = await res.json();
+  dados = await res.json();
+
+  // Preencher o menu de empresas
   const empresas = [...new Set(dados.map(d => d.empresa))].sort();
-  const empresaSelect = document.getElementById("empresa");
-  empresaSelect.innerHTML = `<option value="Todas">Todas</option>`;
+  const selectEmpresa = document.getElementById("empresaFiltro");
   empresas.forEach(emp => {
     const opt = document.createElement("option");
     opt.value = emp;
     opt.textContent = emp;
-    empresaSelect.appendChild(opt);
+    selectEmpresa.appendChild(opt);
   });
-  empresaSelect.value = "Todas";
+
+  atualizarTotais();
+  atualizarResumoEmpresa();
+  filtrarGrafico();
 }
 
-async function carregarDados() {
-  const res = await fetch(URL_SCRIPT);
-  const dados = await res.json();
-  const mesIni = parseInt(document.getElementById("mesInicial").value);
-  const mesFim = parseInt(document.getElementById("mesFinal").value);
-  const empresaSelecionada = document.getElementById("empresa").value;
-  const plataforma = document.getElementById("plataforma").value;
+function atualizarTotais() {
+  const mes = document.getElementById("mesResumo").value;
+  const empresa = document.getElementById("empresaFiltro").value;
+  let totalIfood = 0, totalDM = 0;
 
-  const filtrado = dados.filter(d => {
-    const dt = new Date(d.data);
-    const mes = dt.getMonth() + 1;
-    return mes >= mesIni && mes <= mesFim &&
-      (empresaSelecionada === "Todas" || d.empresa === empresaSelecionada) &&
-      (plataforma === "Todas" || plataforma === d.plataforma);
+  dados.filter(d => !empresa || d.empresa === empresa).forEach(d => {
+    const mesDado = d.data.split("-")[1];
+    if (mes && mes !== mesDado) return;
+    const bruto = parseFloat(d.bruto || 0);
+    if (d.plataforma === "iFood") totalIfood += bruto;
+    if (d.plataforma === "Delivery Much") totalDM += bruto;
   });
 
-  const dadosPorEmpresa = {};
-  const rankingTotal = {};
-  filtrado.forEach(d => {
-    const data = new Date(d.data);
-    const mesAno = luxon.DateTime.fromJSDate(data).toFormat('MM/yyyy');
-    if (!dadosPorEmpresa[d.empresa]) dadosPorEmpresa[d.empresa] = {};
-    dadosPorEmpresa[d.empresa][mesAno] = (dadosPorEmpresa[d.empresa][mesAno] || 0) + parseFloat(d.bruto || 0);
-    rankingTotal[d.empresa] = (rankingTotal[d.empresa] || 0) + parseFloat(d.bruto || 0);
+  document.getElementById("total-ifood").textContent = "R$ " + totalIfood.toLocaleString('pt-BR', { minimumFractionDigits: 2 });
+  document.getElementById("total-dm").textContent = "R$ " + totalDM.toLocaleString('pt-BR', { minimumFractionDigits: 2 });
+  document.getElementById("total-geral").textContent = "R$ " + (totalIfood + totalDM).toLocaleString('pt-BR', { minimumFractionDigits: 2 });
+}
+
+function filtrarGrafico() {
+  const mes = document.getElementById("mesResumo").value;
+  const empresa = document.getElementById("empresaFiltro").value;
+  const agrupado = {};
+
+  dados.filter(d => !empresa || d.empresa === empresa).forEach(d => {
+    const mesDado = d.data.split("-")[1];
+    if (mes && mes !== mesDado) return;
+    const data = d.data;
+    const bruto = parseFloat(d.bruto || 0);
+    const label = new Date(data).toLocaleDateString('pt-BR', { day: '2-digit', month: '2-digit' });
+    agrupado[label] = (agrupado[label] || 0) + bruto;
   });
 
-  const datasets = Object.keys(dadosPorEmpresa).map((empresa, idx) => {
-    const cor = `hsl(${idx * 60}, 70%, 50%)`;
-    const pontos = Object.entries(dadosPorEmpresa[empresa]).map(([x, y]) => ({ x, y })).sort((a, b) => new Date("01/"+a.x) - new Date("01/"+b.x));
-    return {
-      label: empresa,
-      data: pontos,
-      borderColor: cor,
-      backgroundColor: cor + '33',
-      tension: 0.3,
-      pointRadius: 3,
-      fill: false
-    };
-  });
-
-  const mesesUnicos = new Set(filtrado.map(d => new Date(d.data).getMonth()));
-  const totalGeral = filtrado.reduce((soma, d) => soma + parseFloat(d.bruto || 0), 0);
-  const media = totalGeral / mesesUnicos.size;
-  document.getElementById("mediaMensal").innerText = `📊 Média por Mês: R$ ${media.toLocaleString('pt-BR', { minimumFractionDigits: 2 })}`;
-
-  const totaisPorPlataforma = {};
-  filtrado.forEach(d => {
-    const plat = d.plataforma || "Outros";
-    totaisPorPlataforma[plat] = (totaisPorPlataforma[plat] || 0) + parseFloat(d.bruto || 0);
-  });
-  const tbody = document.getElementById("tabelaResumo");
-  tbody.innerHTML = Object.entries(totaisPorPlataforma).map(([p, v]) => `<tr><td>${p}</td><td>R$ ${v.toLocaleString('pt-BR', {minimumFractionDigits: 2})}</td></tr>`).join("");
-
-  const rankingBody = document.getElementById("tabelaRanking");
-  rankingBody.innerHTML = Object.entries(rankingTotal).sort((a,b) => b[1] - a[1]).map(([empresa, valor]) => `<tr><td>${empresa}</td><td>R$ ${valor.toLocaleString('pt-BR', {minimumFractionDigits: 2})}</td></tr>`).join("");
+  const labels = Object.keys(agrupado).sort();
+  const valores = labels.map(d => agrupado[d]);
 
   if (chart) chart.destroy();
-  chart = new Chart(document.getElementById("graficoVendas").getContext("2d"), {
-    type: "line",
-    data: { datasets },
+  chart = new Chart(document.getElementById("graficoVendas").getContext('2d'), {
+    type: 'line',
+    data: {
+      labels: labels,
+      datasets: [{
+        label: 'Valor Bruto por Dia',
+        data: valores,
+        borderColor: '#2980b9',
+        backgroundColor: 'rgba(41,128,185,0.1)',
+        borderWidth: 2,
+        tension: 0.3,
+        pointRadius: 4,
+        fill: true
+      }]
+    },
     options: {
       responsive: true,
-      plugins: { legend: { display: true } },
+      plugins: { legend: { display: false } },
       scales: {
-        x: {
-          type: "time",
-          time: {
-            unit: "month",
-            tooltipFormat: "MM/yyyy",
-            displayFormats: { month: "MM/yyyy" }
-          },
-          title: { display: true, text: "Mês" }
-        },
         y: {
           beginAtZero: false,
-          ticks: { callback: value => "R$ " + value.toLocaleString("pt-BR") },
-          title: { display: true, text: "Valor Bruto" }
+          ticks: {
+            callback: value => 'R$ ' + value.toLocaleString('pt-BR')
+          }
         }
       }
     }
   });
 }
 
-function enviarWhatsapp() {
-  const texto = document.getElementById("mediaMensal").innerText + "\n";
-  const linhas = [...document.querySelectorAll("#tabelaResumo tr")].map(l => l.innerText).join("\n");
-  const mensagem = encodeURIComponent(texto + linhas);
-  window.open(`https://wa.me/?text=${mensagem}`, "_blank");
-}
-</script>
+function atualizarResumoEmpresa() {
+  const mes = document.getElementById("mesResumo").value;
+  const empresa = document.getElementById("empresaFiltro").value;
 
+  const filtrados = dados.filter(d => {
+    const mesDado = d.data.split("-")[1];
+    return (!empresa || d.empresa === empresa) && (!mes || mes === mesDado);
+  });
+
+  const resumo = {};
+  filtrados.forEach(d => {
+    const plat = d.plataforma;
+    if (!resumo[plat]) resumo[plat] = { bruto: 0, liquido: 0, taxa: 0 };
+    resumo[plat].bruto += parseFloat(d.bruto || 0);
+    resumo[plat].liquido += parseFloat(d.liquido || 0);
+    resumo[plat].taxa += parseFloat(d.taxa || 0);
+  });
+
+  const divResumo = document.getElementById("resumo-empresas");
+  divResumo.innerHTML = `<div class="resumo-linha"><strong>${empresa || "TODAS AS EMPRESAS"}</strong>`;
+  for (const plat in resumo) {
+    const val = resumo[plat];
+    const perc = (val.taxa / val.bruto) * 100 || 0;
+    divResumo.innerHTML += `
+      <br><u>${plat}</u><br>
+      💰 Bruto: R$ ${val.bruto.toLocaleString('pt-BR', {minimumFractionDigits: 2})}<br>
+      💵 Líquido: R$ ${val.liquido.toLocaleString('pt-BR', {minimumFractionDigits: 2})}<br>
+      📉 Investimento (${perc.toFixed(2)}%): R$ ${val.taxa.toLocaleString('pt-BR', {minimumFractionDigits: 2})}<br>`;
+  }
+  divResumo.innerHTML += `</div>`;
+}
+
+function enviarWhatsapp() {
+  const totalIFood = document.getElementById("total-ifood").textContent;
+  const totalDM = document.getElementById("total-dm").textContent;
+  const totalGeral = document.getElementById("total-geral").textContent;
+  const mes = document.getElementById("mesResumo").value || "Todos os meses";
+  const empresa = document.getElementById("empresaFiltro").value || "TODAS";
+  const mensagem = `📊 *Resumo de Vendas Delivery* %0A🏢 Empresa: *${empresa}* %0A📅 Mês: *${mes}* %0A🍽️ iFood: *${totalIFood}* %0A📦 Delivery Much: *${totalDM}* %0A💰 Total Geral: *${totalGeral}*`;
+  const telefone = "557799999999"; // Altere para o número desejado
+  const url = `https://wa.me/${telefone}?text=${mensagem}`;
+  window.open(url, "_blank");
+}
+
+carregarDados();
+</script>
 </body>
 </html>
